--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -28,3 +28,28 @@ $background-opacity: 0.9;
     }
   }
 }
+
+// Media Query Mixins
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content; // Anything we put inside this mixin we can use else where
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content; // Anything we put inside this mixin we can use else where
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content; // Anything we put inside this mixin we can use else where
+  }
+}
+
+@mixin mediaXL {
+  @media screen and (min-width: 1171px) {
+    @content; // Anything we put inside this mixin we can use else where
+  }
+}
