--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // Widescreens
 @include mediaXL {
+  .projects {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 // Tablets & Small Laptops
@@ -56,11 +62,19 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 // Smartphones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
