--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -96,7 +96,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url(/img/Jaron_big.jpg);
+      background: url(//img/Jaron_big.jpg);
       border-radius: 50%;
       border: solid 3px $secondary-color;
       background-repeat: no-repeat;
