--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(https://JMitch18.github.io/portfolio/img/background.jpg);
+$home-image: url(https://github.com/JMitch18/portfolio/blob/master/img/background.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
