--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(https://github.com/JMitch18/portfolio/blob/master/img/background.JPG);
+$home-image: url(https://github.com/JMitch18/portfolio/blob/master/img/background.jpg?raw=true);
 $background-opacity: 0.9;
 
 @mixin easeOut {
