--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -92,7 +92,7 @@
       //Slide in from bottom
       transform: translate3d(0, 0, 0); // moves from bottom to correct position
     }
-
+    //
     .portrait {
       width: 250px;
       height: 250px;
