--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -72,6 +72,9 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+    align-items: center;
+    text-align: center;
+    font-size: 4.5rem;
   }
 
   .projects {
