--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -77,6 +77,10 @@
     font-size: 4.5rem;
   }
 
+  main#contact h1 {
+    font-size: 3.5rem;
+  }
+
   .projects {
     grid-template-columns: 1fr;
   }
