--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,24 +3,12 @@
   .projects {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-
-  .portrait {
-    background: url(../img/Jaron_small.jpg);
-    width: 150px;
-    height: 250px;
-  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
   .projects {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  .portrait {
-    background: url(../img/Jaron_small.jpg);
-    width: 150px;
-    height: 250px;
   }
 }
 
@@ -77,6 +65,17 @@
 
   .projects {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .boxes {
+    .div {
+      border: 3px red solid;
+      font-size: 1rem;
+
+      h2 {
+        font-size: 1rem;
+      }
+    }
   }
 }
 
