--- a/scss/main.scss
+++ b/scss/main.scss
@@ -163,9 +163,11 @@ main {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
 
   div {
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: 3px white solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
